@@ -4,19 +4,19 @@
 	<artifactId>image-converter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<parent>
-		<groupId>org.allset.java</groupId>
-		<artifactId>allset-java</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
-	</parent>
+	<!-- <parent> <groupId>org.allset.java</groupId> <artifactId>allset-java</artifactId> <version>1.0.1-SNAPSHOT</version> </parent> -->
 
 	<properties>
 		<maven.compiler.release>11</maven.compiler.release>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
+
 		<junit-platform.version>5.3.1</junit-platform.version>
+		
+		
+		<!-- illegal-access=permit  Skipping JaCoCo execution due to missing execution data file. surefire and jacoco -->
+		<argLine>-Dfile.encoding=${project.build.sourceEncoding} --illegal-access=permit</argLine>
 	</properties>
 
 
@@ -93,17 +93,10 @@
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
+			<artifactId>junit-jupiter-params</artifactId>
 			<version>${junit-platform.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit-platform.version}</version>
-            <scope>test</scope>
-        </dependency>		
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -118,14 +111,14 @@
 			<version>${junit-platform.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-platform.version}</version>
-            <scope>test</scope>
-        </dependency>
-        
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit-platform.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>com.github.jai-imageio</groupId>
 			<artifactId>jai-imageio-core</artifactId>
@@ -149,18 +142,48 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
 		<plugins>
-			
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+				<configuration>
+					<argLine>
+						${argLine}
+					</argLine>				
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<argLine>
+						${argLine}
+					</argLine>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
@@ -168,8 +191,8 @@
 				<configuration>
 					<generateBackupPoms>false</generateBackupPoms>
 				</configuration>
-			</plugin>			
-		
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -204,7 +227,7 @@
 					</archive>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 </project>
